--- a/ayamlodhokhastulungagung.html
+++ b/ayamlodhokhastulungagung.html
@@ -27,7 +27,7 @@ Berikut ini resep ayam lodho, olahan daging ayam dari Tulungagung yang khas dan 
 <li> 4 daun jeruk</li>
 <li> Air</li>
 </ol>
-<h3>Cara memasak ::</h3>
+<h3>Cara memasak :</h3>
 <ol>
 <li> Cuci bersih ayam kampung panggang yang sudah dipotong-potong</li>
 <li> Haluskan bawang merah, bawang putih, kunyit, ketumbar, kemiri, cabe (5butir saja)</li>
