--- a/ayamgorengsasandokhasnusatenggaratimur.html
+++ b/ayamgorengsasandokhasnusatenggaratimur.html
@@ -41,5 +41,9 @@ Selain itu bikinnya juga gampang dan semua bahan2 mudah didapat di sekitar kita.
 <li> Masak terus sambil diaduk sampai airnya menyusut, matikan api</li>
 <li> Sajikan.</li>
 
+<p>
+  <li><a href ="index.html"> Kembali ke halaman utama</a></li>
+</p>
+
   </body>
 </html>
