--- a/ayamlodhokhastulungagung.html
+++ b/ayamlodhokhastulungagung.html
@@ -38,6 +38,9 @@ Berikut ini resep ayam lodho, olahan daging ayam dari Tulungagung yang khas dan 
 <li> Siap disajikan.</li>
 </ol>
 
+<p>
+  <li><a href="index.html">Kembali ke halaman utama</a></li>
+</p>
 
   </body>
 </html>
