--- a/buburmanado.html
+++ b/buburmanado.html
@@ -49,5 +49,9 @@ Bubur Manado disajikan bersama sambal bekasang, sejenis terasi yang dibuat dari 
 <li> Tambahkan air bila diperlukan, masukkan garam lada dan kaldu jamur aduk rata lagi.</li>
 <li> Setelah beras sudah menjadi bubur terakhir masukan semua sayuran aduk rata, koreksi rasa, angkat.</li>
 </ol>
+
+<p>
+  <li><a href = "index.html">Kembali ke halaman utama</a></li>
+</p>
   </body>
 </html>
