--- a/nasibakeporkalimantantimur.html
+++ b/nasibakeporkalimantantimur.html
@@ -52,6 +52,9 @@ Nasi Bekepor biasanya disajikan bersama dengan sayur gangan asam kukar yang meru
 <li> Penyajian : Hidangkan Nasi Bakepor hangat hangat dengan sambal Raja</li>
 </ol>
 
+<p>
+  <li><a href = "index.html">Kembali ke halaman utama</a></li>
+</p>
 
   </body>
 </html>
