--- a/pallubasa.html
+++ b/pallubasa.html
@@ -64,5 +64,9 @@ dan kuah mengental. Angkat.</li>
 <li> Daging bisa dimasak menggunakan panci presto agar lebih cepat empuk.</li>
 <li> Pallu basa biasa disajikan dengan kuning telur ayam mentah.</li>
 </ol>
+
+<p>
+ <li><a href = "index.html"> Kembali Ke halaman utama </a></li>
+</p>
 </body>
 </html>
