--- a/papedatelorayam.html
+++ b/papedatelorayam.html
@@ -28,6 +28,9 @@
 <li> Ulangi sampai adonan habis. Siap dihidangkan dengan cocolan saus atau mayonaise.</li>
 </ol>
 
+<p>
+  <li><a href = "index.html">Kembali ke halaman utama</a></li>
+</p>
 
   </body>
 </html>
