--- a/satelilitayamkhasbali.html
+++ b/satelilitayamkhasbali.html
@@ -37,5 +37,9 @@ Untuk membuat sate lilit ayam khas Bali sendiri sangat mudah kok. Mau tahu seper
 <li> Untuk Sambal matah : iris bawang merah,daun jeruk,cabai,dan batang serai bagian putihnya saja. Beri sejumput garam. panaskan 2 sdm minyak masukkan terasi. goreng hingga terasi hancur bercampur minyak. lalu campurkan pada bahan irisan. Aduk rata, siap dihidangkan.</li>
 </ol>
 
+<p>
+  <li><a href = "index.html">Kembali ke halaman utama</a></li>
+</p>
+
   </body>
 </html>
