--- a/seblakbandung.html
+++ b/seblakbandung.html
@@ -35,5 +35,9 @@
 <li> Masukkan daun sawi, daun bawang, dan cabe rawit iris, masak hingga sayuran matang.</li>
 </ol>
 
+<p>
+  <li><a href = "index.html">Kembali ke halaman utam</a></li>
+</p>
+
   </body>
 </html>
