--- a/sopkonro.html
+++ b/sopkonro.html
@@ -50,5 +50,9 @@ Sop konro merupakan salah satu makanan yang diburu ketika berwisata ke Makassar.
 <li> Sajikan dimangkok saji lalu taburi bawang goreng.
 </ol>
 
+<p>
+  <li><a href = "index.html">Kembali ke halaman utama</a></li>
+</p>
+
   </body>
 </html>
