--- a/sotopadang.html
+++ b/sotopadang.html
@@ -56,5 +56,10 @@
   <li>Tata sohun, daging didalam mangkok, siram dengan kuah soto, beri kerupuk, perkedel, seledri dan sambal.</li>
   <li>Sajikan.</li>
 </ol>
+
+<p>
+  <li><a href = "index.html">Kembali ke halaman utama</a></li>
+</p>
+
   </body>
 </html>
