Latihan1/index.html up

--- a/latihan1/index.html
+++ b/latihan1/index.html
@@ -10,17 +10,19 @@
     <p>Indonesia sudah lama dikenal oleh bangsa luar sebagai negara yang kaya akan budaya termasuk makanan khas. Hal ini dikarenakan, Indonesia memiliki banyak etnis dimana tiap etnis memiliki makanan khas yang beragam dan berbeda-beda. Pada umumnya, makanan khas Indonesia sarat bumbu yang berasal dari satu jenis rempah. Perpaduan dari banyak bumbu tersebut yang membuat makanan khas Indonesia memiliki citarasa dan aroma yang berbeda dari makanan khas negara asing, seperti makanan  Barat, Jepang, dan Cina. Oleh karena itu, sebagai bangsa Indonesia, kita harus bangga dengan makanan khas dari negeri sendiri karena makanan khas Indonesia juga sudah tersebar di penjuru dunia. Inilah 10 Makanan Khas Indonesia. </p>
 
     <div id =menu>
-      <li><a href="pallubasa.html">Pallu Basa</a></li>
-      <li><a href="sotopadang.html">Soto Padang</a></li>
-      <li><a href="buburmanado.html">Bubur Manado</a></li>
-      <li><a href="sopkonro.html">Sop Konro</a></li>
-      <li><a href="rawonsurabaya.html">Rawon Surabaya</a></li>
-      <li><a href="ayamgorengsasandokhasnusatenggaratimur.html">Ayam goreng sasando khas Nusa Tenggara Timur</a></li>
-      <li><a href="ayamlodhokhastulungagung.html">Ayam lodho khas Tulungagung</a></li>
-      <li><a href="nasibakeporkalimantantimur.html">Nasi bakepor Kalimantan Timur</a></li>
-      <li><a href="papedatelorayam.html">Papeda telor ayam</a></li>
-      <li><a href="seblakbandung.html">Seblak Bandung</a></li>
-      <li><a href="satelilitayamkhasbali.html">Sate lilit ayam khas Bali</a></li>
+      <p>
+      <br><a href="pallubasa.html">Pallu Basa</a>
+      <br><a href="sotopadang.html">Soto Padang</a>
+      <br><a href="buburmanado.html">Bubur Manado</a>
+      <br><a href="sopkonro.html">Sop Konro</a>
+      <br><a href="rawonsurabaya.html">Rawon Surabaya</a>
+      <br><a href="ayamgorengsasandokhasnusatenggaratimur.html">Ayam goreng sasando khas Nusa Tenggara Timur</a>
+      <br><a href="ayamlodhokhastulungagung.html">Ayam lodho khas Tulungagung</a>
+      <br><a href="nasibakeporkalimantantimur.html">Nasi bakepor Kalimantan Timur</a>
+      <br><a href="papedatelorayam.html">Papeda telor ayam</a>
+      <br><a href="seblakbandung.html">Seblak Bandung</a>
+      <br><a href="satelilitayamkhasbali.html">Sate lilit ayam khas Bali</a>
+    </p>
     </div>
 
 
