--- a/latihan1/rawonsurabaya.html
+++ b/latihan1/rawonsurabaya.html
@@ -6,7 +6,7 @@
     <title>Rawon Surabaya</title>
 
   </head>
-  <body background-color = #d0d0d0>
+  <body background =img/bg3.jpg>
 
     <h1 style="color: brown;">Rawon Surabaya</h1>
     <p>Resep rawon daging sapi bisa kamu terapkan sebagai sajian Idul Adha. Rawon merupakan hidangan berkuah seperti sup yang berisi potongan lembut daging serta aroma dan warna hitam khas dari buah keluak. Rawon merupakan makanan khas dari Jawa Timur. Rasanya yang begitu menggugah selera membuatnya digemari banyak orang. Bahkan tidak hanya orang Surabaya atau Jawa Timur saja yang gemar menyantapnya, orang-orang dari luar Pulau Jawa, bahkan orang asing dari luar negeri pun menyukainya.</p>
