latihan2/index.html baru

--- a/latihan2/tujuanweb.html
+++ b/latihan2/tujuanweb.html
@@ -9,7 +9,7 @@
     <h1 style="color:white">Tujuan Web</h1>
       <a href="index.html" style="color:white">Home</a>
     <hr>
-    <p style="color:aqua"> Tujuan web ini saya buat untuk memenuhi tugas mata kuliah Pemograman Desain Web dan Praktikum Pemograman Desain Web,
+    <p style="color:aqua"> Tujuan web ini saya buat untuk memenuhi tugas mata kuliah  Desain Web dan Praktikum Desain Web,
       juga untuk mengasah kemampuan mendesain sebuah web menjadi cantik serta saya akan memakai web Sepuluh Kuliner Tradional ini kalau jadi
      untuk memakainya disubmission atau final kelas belajar dasar web dicoding dan mendapat sertifikat.  </p>
 
