latihan3/index.html baru

--- a/latihan3/tujuanweb.html
+++ b/latihan3/tujuanweb.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head id="bg">
+  <head id="wal">
     <meta charset="utf-8">
     <title>tujuanweb</title>
     <link rel="stylesheet" href="css/style51018006.css">
