--- a/latihan3/biodata.html
+++ b/latihan3/biodata.html
@@ -7,7 +7,7 @@
     <title>BIODATA</title>
     <link rel="stylesheet" href="css/style51018006.css">
   </head id="bg">
-  <body  background="img/bg1.jpg">
+  <body>
     <h1 class="heading"><i><u><strong>BIODATA</strong></u></i></h1>
 
 <article class="card">
