--- a/latihan3/biodata.html
+++ b/latihan3/biodata.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>BIODATA</title>
     <link rel="stylesheet" href="css/style51018006.css">
-  </head id="bg">
-  <body>
+  </head >
+  <body id="bg">
     <h1 class="heading"><i><u><strong>BIODATA</strong></u></i></h1>
 
 <article class="card">
