--- a/latihan3/biodata.html
+++ b/latihan3/biodata.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<a href="index.html">Home|</a>
-<a href="tujuanweb.html">Informasi Tentang Web</a>
+<nav class="navigasi">
+  <ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="tujuanweb.html">Informasi Tentang Web</a></li>
+</ul>
+</nav>
   <head>
     <meta charset="utf-8">
     <title>BIODATA</title>
     <link rel="stylesheet" href="css/style51018006.css">
   </head >
-  <body id="bg">
+  <body>
     <h1 class="heading"><i><u><strong>BIODATA</strong></u></i></h1>
 
 <article class="card">
