--- a/latihan3/biodata.html
+++ b/latihan3/biodata.html
@@ -11,7 +11,7 @@
     <title>BIODATA</title>
     <link rel="stylesheet" href="css/style51018006.css">
   </head >
-  <body>
+  <body id="wal">
     <h1 class="heading"><i><u><strong>BIODATA</strong></u></i></h1>
 
 <article class="card">
