latihan3/index.html

--- a/latihan3/biodata.html
+++ b/latihan3/biodata.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style51018006.css">
   </head >
   <body id="bg">
-    <h1 class="heading"><i><u><strong>BIODATA</strong></u></i></h1>
+    <h1 class="heading" style="color:white"><i><u><strong>BIODATA</strong></u></i></h1>
 
 <article class="card">
     <img src="img/img1.jpeg" height= "300px">
