latihan4/index.html baru

--- a/latihan4/biodata.html
+++ b/latihan4/biodata.html
@@ -36,6 +36,10 @@
     <td>Jurusan : </td>
     <td> Sistem Informasi</td>
   </tr>
+  <tr>
+    <td>Instagram : </td>
+    <td> fw0201</td>
+  </tr>
 </table>
 
 </article>
