--- a/latihan5/nasibakeporkalimantantimur.html
+++ b/latihan5/nasibakeporkalimantantimur.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <a href="papedatelorayam.html">Next</a>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Nasi bakepor Kalimantan Timur</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
-  <body background=img/bg3.jpg>
-<h1 style="color: brown;">Nasi bakepor Kalimantan Timur</h1>
-<p>Nasi Bekepor khas Kutai Kartanegara merupakan nasi yang dicampur dengan <a href="bahan/ikanasin.html" style= "color:red">ikan asin</a>, rempah-rempah, dan minyak sayur.
+  <body>
+<h1>Nasi bakepor Kalimantan Timur</h1>
+<nav class="navigasi">
+  <ul>
+<li><a href = "ayamlodhokhastulungagung.html">Back</a></li>
+<li><a href="papedatelorayam.html">Next</a></li>
+<li><a href="#utama">Bahan Utama</a></li>
+<li><a href="#sambal">Bahan Sambal</a></li>
+<li><a href="#bumbu">Bumbu</a></li>
+<li><a href="#cara">Cara Membuat</a></li>
+<li><a href = "index.html">Kembali ke halaman utama</a></li>
+</ul>
+</nav>
+<img class="blockmenu"src="img/nasibakepor.jpg" alt="nasibakepor" class="gambar-resep">
+<p>Nasi Bekepor khas Kutai Kartanegara merupakan nasi yang dicampur dengan <a href="bahan/ikanasin.html">ikan asin</a>, rempah-rempah, dan minyak sayur.
 Nasi Bekepor biasanya disajikan bersama dengan sayur gangan asam kukar yang merupakan sejenis sayur asem yang diolah bersama dengan kepala ikan dan ubi manis. </p>
-<a href="#utama">Bahan Utama</a>|
-<a href="#sambal">Bahan Sambal</a>|
-<a href="#bumbu">Bumbu</a>|
-<a href="#cara">Cara Membuat</a>|
+<p>Pada masa zaman Kerajaan Kutai Kartanegara, nasi bekepor merupakan menu khas bagi Raja Kutai Kartanegara, namun kini nasi bekepor bisa dinikmati semua kalangan.
+
+Nasi bekepor juga digunakan untuk menyebarkan agama Islam, saat itu Raja Kutai Kartanegara sudah memeluk agama Islam.
+
+Zaman dahulu, nasi bekepor dimasak dengan cara diputar diatas bara api menggunakan kenceng atau kendhil yang terbuat dari perunggu.
+
+Proses memutar inilah yang disebut dengan bekepor.
+
+Ketika diputar, dibacakan shalawat sebanyak tiga kali dan disebutkan nama seseorang yang diinginkan untuk segera bertemu seraya membayangkan wajahnya.
+
+Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya untuk datang menemui.</p>
 
 <section id="utama">
-<h2>Bahan:</h2>
+<br><h2>Bahan:</h2>
 <ol>
 <li>300 gr beras putih, cuci bersih</li>
 <li> 2 lembar daun salam</li>
@@ -70,9 +90,10 @@ Nasi Bekepor biasanya disajikan bersama dengan sayur gangan asam kukar yang meru
 </ol>
 </section>
 
-<p>
-    <a href="#top">Kembali Ke Atas</a>
-  <li><a href = "index.html" style="color:white">Kembali ke halaman utama</a></li>
-</p>
+<nav class="navigasi">
+  <ul>
+    <li><a href="#top">Kembali Ke Atas</a></li>
+  </ul>
+</nav>
   </body>
 </html>
