--- a/latihan5/rawonsurabaya.html
+++ b/latihan5/rawonsurabaya.html
@@ -4,20 +4,28 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Rawon Surabaya</title>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
-  <body background =img/bg3.jpg>
-    <a href="ayamgorengsasandokhasnusatenggaratimur.html">Next</a>
-    <h1 style="color: brown;">Rawon Surabaya</h1>
-    <a href="#utama">Bahan Utama</a>|
-    <a href="#pelengkap">Bahan Pelengkap</a>|
-    <a href="#cara">Cara Membuat</a>|
+  <body>
+    <h1>Rawon Surabaya</h1>
+    <nav class="navigasi">
+      <ul>
+    <li><a href = "sopkonro.html">Back</a></li>
+    <li><a href="ayamgorengsasandokhasnusatenggaratimur.html">Next</a></li>
+    <li><a href="#utama">Bahan Utama</a></li>
+    <li><a href="#pelengkap">Bahan Pelengkap</a></li>
+    <li><a href="#cara">Cara Membuat</a></li>
+    <li><a href = "index.html">Kembali ke halaman utama</a></li>
+  </ul>
+</nav>
+    <img class="blockmenu"src="img/rawon.jpg" alt="rawon" class="gambar-resep">
     <p>Resep rawon daging sapi bisa kamu terapkan sebagai sajian Idul Adha. Rawon merupakan hidangan berkuah seperti sup yang berisi potongan lembut daging serta aroma dan warna hitam khas dari buah keluak. Rawon merupakan makanan khas dari Jawa Timur. Rasanya yang begitu menggugah selera membuatnya digemari banyak orang. Bahkan tidak hanya orang Surabaya atau Jawa Timur saja yang gemar menyantapnya, orang-orang dari luar Pulau Jawa, bahkan orang asing dari luar negeri pun menyukainya.</p>
-Resep rawon <a href="bahan/dagingsapi.html" style= "color:red">daging sapi</a> yang enak juga cukup mudah dibuat. Kamu bisa menjadikan daging sapi kurban menjadi santapan yang lezat ini. Idealnya rawon dibuat dari daging sandung lamur atau di dunia kuliner dikenal dengan brisket, yang sedikit berlemak dan enak dimasak lama. Namun, kamu juga bisa menggunakan bagian-bagian lainnya sesuai selera.
+<p>Resep rawon <a href="bahan/dagingsapi.html">daging sapi</a> yang enak juga cukup mudah dibuat. Kamu bisa menjadikan daging sapi kurban menjadi santapan yang lezat ini. Idealnya rawon dibuat dari daging sandung lamur atau di dunia kuliner dikenal dengan brisket, yang sedikit berlemak dan enak dimasak lama. Namun, kamu juga bisa menggunakan bagian-bagian lainnya sesuai selera.</p>
 
 
 <section id="utama">
-    <h2>Bahan:</h2>
+  <h2>Bahan:</h2>
     <ol>
 <li>500 gram daging sapi, bagian sandung lumur</li>
 <li>Air untuk merebus daging</li>
@@ -61,10 +69,11 @@ Resep rawon <a href="bahan/dagingsapi.html" style= "color:red">daging sapi</a> y
 </ol>
 </section>
 
-<p>
-  <a href="#top">Kembali Ke Atas</a>
-  <li><a href = "index.html"style="color:white">Kembali ke halaman utama</a></li>
-</p>
+<nav class="navigasi">
+  <ul>
+  <li><a href="#top">Kembali Ke Atas</a></li>
+</ul>
+</nav>
 
   </body>
 </html>
