--- a/latihan5/ayamgorengsasandokhasnusatenggaratimur.html
+++ b/latihan5/ayamgorengsasandokhasnusatenggaratimur.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
-  <body class="blue-gradient">
-    <h1 class="heading gradient">Ayam Goreng Sasando Khas Nusa Tenggara Timur</h1>
+  <body>
+    <h1>Ayam Goreng Sasando Khas Nusa Tenggara Timur</h1>
     <nav class="navigasi">
       <ul>
     <li><a href = "rawonsurabaya.html">Back</a></li>
