--- a/latihan3/nasibakeporkalimantantimur.html
+++ b/latihan3/nasibakeporkalimantantimur.html
@@ -9,7 +9,7 @@
 <h1 class="heading">Nasi bakepor Kalimantan Timur</h1>
 <nav class="navigasi">
   <ul>
-<li><a href="../papedatelorayam.html">Next</a></li>
+<li><a href="papedatelorayam.html">Next</a></li>
 <li><a href="#utama">Bahan Utama</a></li>
 <li><a href="#sambal">Bahan Sambal</a></li>
 <li><a href="#bumbu">Bumbu</a></li>
