--- a/latihan4/nasibakeporkalimantantimur.html
+++ b/latihan4/nasibakeporkalimantantimur.html
@@ -12,7 +12,7 @@
 <nav class="navigasi">
   <ul>
 <li><a href = "ayamlodhokhastulungagung.html">Back</a></li>
-<li><a href="../papedatelorayam.html">Next</a></li>
+<li><a href="papedatelorayam.html">Next</a></li>
 <li><a href="#utama">Bahan Utama</a></li>
 <li><a href="#sambal">Bahan Sambal</a></li>
 <li><a href="#bumbu">Bumbu</a></li>
