--- a/latihan4/rawonsurabaya.html
+++ b/latihan4/rawonsurabaya.html
@@ -12,7 +12,7 @@
     <nav class="navigasi">
       <ul>
     <li><a href = "sopkonro.html">Back</a></li>
-    <li><a href="../ayamgorengsasandokhasnusatenggaratimur.html">Next</a></li>
+    <li><a href="ayamgorengsasandokhasnusatenggaratimur.html">Next</a></li>
     <li><a href="#utama">Bahan Utama</a></li>
     <li><a href="#pelengkap">Bahan Pelengkap</a></li>
     <li><a href="#cara">Cara Membuat</a></li>
