--- a/latihan3/rawonsurabaya.html
+++ b/latihan3/rawonsurabaya.html
@@ -10,7 +10,7 @@
     <h1 class="heading">Rawon Surabaya</h1>
     <nav class="navigasi">
       <ul>
-    <li><a href="../ayamgorengsasandokhasnusatenggaratimur.html">Next</a></li>
+    <li><a href="ayamgorengsasandokhasnusatenggaratimur.html">Next</a></li>
     <li><a href="#utama">Bahan Utama</a></li>
     <li><a href="#pelengkap">Bahan Pelengkap</a></li>
     <li><a href="#cara">Cara Membuat</a></li>
