--- a/latihan5/index.html
+++ b/latihan5/index.html
@@ -10,7 +10,7 @@ rel="stylesheet">
     <title>Resep</title>
   </head>
   <body>
-<nav class="blue" role="navigation">
+<nav class="purplechef" role="navigation">
   <div class="nav-wrapper container">
     <a href="#" class="brand-logo">MASTER CHEF</a>
     <ul class="right hide-on-med-and-down">
@@ -28,7 +28,7 @@ rel="stylesheet">
 </nav>
 
 <div class="container">
-  <h4 class="blue-text">Koleksi Resep 10 Kuliner Tradisional</h4>
+  <h4 class="bluechef-text">Koleksi Resep 10 Kuliner Tradisional</h4>
 
   <div class="row">
     <div class="col m5 s12">
@@ -54,11 +54,6 @@ rel="stylesheet">
 </div>
 </div>
 </div>
-
-
-
-
-
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-
 2.1.1.min.js"></script>
