--- a/latihan5/tentangstmikkharisma.html
+++ b/latihan5/tentangstmikkharisma.html
@@ -6,21 +6,43 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h1>STMIK KHARISMA MAKASSAR </h1>
     <nav class="navigasi">
       <ul>
-        <li><a href="index.html">HOME</a>
+        <li><a href="index.html">HOME</a></li>
         </ul>
         </nav>
-    <img src="img/kampus.jpg">
+        <img class="blockmenu" src="img/logo.jpg" width="200px">
+        <table>
+          <tr>
+            <td>Didirikan : 2000</td>
+          </tr>
+          <tr>
+            <td>Ketua:	Syaiful Rahman, S.Kom., M.Kom.</td>
+          </tr>
+          <tr>
+            <td>Lokasi:Jln.Baji Ateka NO.20,Makassar, Sulawesi Selatan, Indonesia</td>
+          </tr>
+          <tr>
+            <td>No.Telpon: (0411) 871555</td>
+            <tr>
+              <td>Afiliasi:	Yayasan Pendidikan KHARISMA Makassar</td>
+            </tr>
+          </table>
+          
+        <div class="all">
+        <img src="img/kampus.jpg">
     <p>Sekolah Tinggi Manajemen Informatika dan Komputer (STMIK) Kharisma Makassar adalah perguruan tinggi
      bidang informatika dan komputer yang berdiri di Makassar pada 29 Maret 2000 yang ditandai dengan terbitnya
       Surat Keputusan Dirjen Pendidikan Tinggi Departemen Pendidikan Nasional nomor 33/D/O/2000 tanggal 29 Maret 2000.
       STMIK Kharisma Makassar hingga saat ini telah menghasilkan lebih dari 1000 alumni yang sebagian besar telah
       terserap sebagai tenaga kerja di berbagai bidang.</p>
-<p>
-      Didirikan	2000
-Ketua:	Syaiful Rahman, S.Kom., M.Kom.
-Lokasi:	Makassar, Sulawesi Selatan, Indonesia
-Afiliasi:	Yayasan Pendidikan KHARISMA Makassar</p>
+    </div>
+
+
+
+
+
+
   </body>
 </html>
