--- a/latihan5/biodata.html
+++ b/latihan5/biodata.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head >
   <body>
-    <h1 style="color:white"><i><u><strong>BIODATA</strong></u></i></h1>
+    <div class="all">
+    <h1>BIODATA</h1>
+  </div>
 
 <article class="card">
     <img class="blockmenu" src="img/img1.jpeg" height= "300px">
